--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220529123307">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220529124923">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=79147781-2d17-420c-8feb-643f33e7c47e&lang=ru_RU&_v=20220529123307">
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=79147781-2d17-420c-8feb-643f33e7c47e&lang=ru_RU&_v=20220529124923">
 	</script>
 </head>
 
@@ -192,7 +192,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -226,7 +226,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -260,7 +260,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -294,7 +294,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -328,7 +328,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -362,7 +362,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -396,7 +396,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 							<div class="spollers__item spoller-courses__item">
@@ -430,7 +430,7 @@
 											Наши ученицы начинают зарабатывать уже на следующий день после получения сертификата об обучении!
 										</p>
 									</div>
-									<a href="" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
+									<a href="#" data-popup="#popup1" class="spoller-courses__link pinky">Стоимость и программа курса »</a>
 								</div>
 							</div>
 						</div>
@@ -1050,7 +1050,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220529123307"></script>
+	<script src="js/app.min.js?_v=20220529124923"></script>
 </body>
 
 </html>
